# polycli

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  codexctl-linux-x64-0.5.16.tgz  pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  npm-publish.yml  release.yml  security.yml
docs/: NPM_PUBLISHING.md
npm/: LICENSE  README.md  codexctl.js  index.js  install.js  package.json  run.js
npm-platforms/darwin-arm64/: README.md  package.json
npm-platforms/darwin-x64/: README.md  package.json
npm-platforms/linux-arm64/: README.md  package.json
npm-platforms/linux-x64/: README.md  package.json
npm-platforms/win32-x64/: README.md  package.json
skills/agent-loop-hardening/: SKILL.md
skills/agent-loop-hardening/references/: runtime-contracts.md
skills/dependency-security-triage/: SKILL.md
skills/dependency-security-triage/references/: security-notes.md
skills/release-maintenance/: SKILL.md
skills/release-maintenance/references/: release-notes.md
skills/shapeup-bet-authoring/: SKILL.md
skills/shapeup-bet-authoring/references/: domain-map.md  shapeup-planning.md
src/: main.rs
src/commands/: backup.rs  completions.rs  delete.rs  diff.rs  doctor.rs  env.rs  export.rs  history.rs  import.rs  list.rs  load.rs  mod.rs  run.rs  run_loop.rs  runs.rs  save.rs  setup.rs  status.rs  switch.rs  usage.rs  validate.rs  verify.rs
src/utils/: api.rs  auth.rs  command_exit.rs  config.rs  config_test.rs  crypto.rs  files.rs  files_test.rs  migrate.rs  mod.rs  profile.rs  profile_test.rs  runs.rs  settings.rs  task.rs  transaction.rs  validate.rs  validation.rs
tests/: cli_json.rs  run_loop_cli.rs  validate_cli.rs
