[package]
name = "codexo"
version = "0.1.0"
edition = "2024"
authors = ["Bhanu Korthiwada <bhanu@example.com>"]
description = "The ultimate CLI for managing multiple OpenAI Codex accounts"
license = "MIT"
repository = "https://github.com/BhanuKorthiwada/codexo"
homepage = "https://github.com/BhanuKorthiwada/codexo"
documentation = "https://github.com/BhanuKorthiwada/codexo#readme"
readme = "README.md"
keywords = ["codex", "openai", "cli", "oauth", "profile", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[[bin]]
name = "codexo"
path = "src/main.rs"

[[bin]]
name = "cx"
path = "src/main.rs"

[dependencies]
# Core CLI
clap = { version = "4.5.26", features = ["derive", "env", "cargo", "string", "unicode", "wrap_help"] }
clap_complete = "4.5.42"

# Async runtime
tokio = { version = "1.43.0", features = ["full", "tracing"] }

# Serialization
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

# Error handling
anyhow = "1.0.95"

# Directories and paths
directories = "6.0.0"
dirs = "6.0.0"

# Time
chrono = { version = "0.4.39", features = ["serde", "now"] }

# UI/UX
colored = "3.0.0"
indicatif = "0.17.11"
dialoguer = "0.12.0"
console = "0.15.10"

# File operations
walkdir = "2.5.0"
tempfile = "3.16.0"

# Compression
flate2 = "1.0.35"
tar = "0.4.43"

# Encoding
base64 = "0.22.1"

# Version parsing for migrations
semver = { version = "1.0.28", features = ["serde"] }

# Cryptography (optional)
aes-gcm = { version = "0.11.0-rc.3", optional = true }
rand = { version = "0.8.5", optional = true }

# Utilities
which = "7.0.1"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "ansi", "json"] }

# Tables
prettytable-rs = "0.10.0"

# HTTP client for OpenAI API
reqwest = { version = "0.12.12", features = ["json", "rustls-tls", "stream"] }

# Encryption
age = { version = "0.11.2", features = ["ssh"] }
secrecy = "0.10.3"

[features]
default = ["encryption"]
encryption = ["aes-gcm", "rand"]
full = ["encryption"]

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.16.0"
serial_test = "3.2.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
mockall = "0.13.1"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true
incremental = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "allow"
unused_crate_dependencies = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "allow", priority = -1 }
# Multiple versions can happen with optional features
multiple_crate_versions = { level = "allow" }

[lints.rustdoc]
all = "warn"
